--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/app.js -e js,hbs,css"
+    "start": "node ./src/app.js",
+    "dev": "nodemon ./src/app.js -e js,hbs,css"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,8 @@
     "hbs": "^4.1.1",
     "path": "^0.12.7",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
